pkg/objects/Requisicoes__c.object
<CustomObject>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descrição</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documento</label>
        <referenceTo>Documento__c</referenceTo>
        <relationshipLabel>Requisições</relationshipLabel>
        <relationshipName>Documento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gerente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Requisições Pendentes para Aprovação</relationshipLabel>
        <relationshipName>Requisicoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LabelPicklist__c</fullName>
        <formula>Documento__r.Name</formula>
        <label>LabelPicklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ponto_por_utilizacao__c</fullName>
        <description>Recebe 10 pontos caso seja utilizado no último mês.</description>
        <formula>IF(  TEXT( Utilizado_no_ultimo_mes__c) = &quot;Utilizado&quot;, 10, 0)</formula>
        <label>Ponto por utilização no último mês</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontos__c</fullName>
        <formula>10</formula>
        <label>Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projeto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projeto</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Requisições</relationshipLabel>
        <relationshipName>Projeto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requerente__c</fullName>
        <label>Requerente</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Requisições feitas</relationshipLabel>
        <relationshipName>Requisicoes2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usada_no_ultimo_mes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo não está sendo usado.</description>
        <label>Usada no último mês</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilizado_no_ultimo_mes__c</fullName>
        <label>Utilizado no último mês</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Em avaliação</fullName>
                </value>
                <value>
                    <fullName>Utilizado</fullName>
                </value>
                <value>
                    <fullName>Não utilizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Requisições</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisições</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>